sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2: error: not found: value bubbleSort2
		bubbleSort2();
                ^AlgBubbleSort2:6: error: type mismatch;
 found   : Int
 required: Boolean
  while (getNombreValeurs())
                         ^